@@ -30,6 +30,7 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.anchoranalysis.feature.io.csv.FeatureCSVWriter;
 import org.anchoranalysis.feature.io.csv.metadata.FeatureCSVMetadata;
@@ -75,7 +76,8 @@ class RemoveNaNColumns extends WriteLazy {
 
         // Contains integers 0 to (numberFeatures-1) inclusive.
         int numberFeatures = outputMetadata.featureNames().size();
-        indicesToCheck = IntStream.range(0, numberFeatures).boxed().toList();
+        // This needs to be a mutable list to be able to remove elements while iterating over it.
+        indicesToCheck = IntStream.range(0, numberFeatures).boxed().collect(Collectors.toList());
     }
 
     @Override
